--- a/assets/style.css
+++ b/assets/style.css
@@ -251,6 +251,7 @@ input[type="submit"] {
   width: 180px;
   text-align: center;
   border-radius: 60px;
+  background-color: #1d6154;
 }
 
 footer nav ul {
